Haiku/bridge/libmojobe/mojobe.h

/*!	`BRect` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BRect` by
	hidden reference. */
struct mojobe_BRect {
	float	left;
	float	top;
	float	right;
	float	bottom;
};
/*!	`BPoint` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BPoint` by
	hidden reference. */
struct mojobe_BPoint {
	float	x;
	float	y;
};
// #pragma mark - BWindow


// status_t BWindow::Archive(BMessage* archive, bool deep) const
status_t mojobe_BWindow_Archive(BWindow* self,
	BMessage* a_archive,
	bool a_deep);
// void BWindow::Close()
void mojobe_BWindow_Close(BWindow* self);
// void BWindow::AddChild(BView* child, BView* before)
void mojobe_BWindow_AddChild(BWindow* self, BView* a_child, BView* a_before);
// bool BWindow::RemoveChild(BView* child)
bool mojobe_BWindow_RemoveChild(BWindow* self, BView* a_child);
// int32 BWindow::CountChildren() const
int32 mojobe_BWindow_CountChildren(BWindow* self);
// BView* BWindow::ChildAt(int32 index) const
BView* mojobe_BWindow_ChildAt(BWindow* self, int32 a_index);
// void BWindow::MessageReceived(BMessage* message)
void mojobe_BWindow_MessageReceived(BWindow* self, BMessage* a_message);
// void BWindow::FrameMoved(BPoint newPosition)
void mojobe_BWindow_FrameMoved(BWindow* self, mojobe_BPoint a_newPosition);
// void BWindow::WorkspacesChanged(uint32 oldWorkspaces, uint32 newWorkspaces)
void mojobe_BWindow_WorkspacesChanged(BWindow* self,
	uint32 a_oldWorkspaces,
	uint32 a_newWorkspaces);
// void BWindow::WorkspaceActivated(int32 workspace, bool state)
void mojobe_BWindow_WorkspaceActivated(BWindow* self,
	int32 a_workspace,
	bool a_state);
// void BWindow::FrameResized(float newWidth, float newHeight)
void mojobe_BWindow_FrameResized(BWindow* self,
	float a_newWidth,
	float a_newHeight);
// void BWindow::Minimize(bool minimize)
void mojobe_BWindow_Minimize(BWindow* self, bool a_minimize);
// void BWindow::Zoom(BPoint origin, float width, float height)
void mojobe_BWindow_Zoom__BPoint_float_float(BWindow* self,
	mojobe_BPoint a_origin,
	float a_width,
	float a_height);
// void BWindow::Zoom()
void mojobe_BWindow_Zoom__void(BWindow* self);
// void BWindow::SetZoomLimits(float maxWidth, float maxHeight)
void mojobe_BWindow_SetZoomLimits(BWindow* self,
	float a_maxWidth,
	float a_maxHeight);
// void BWindow::SetPulseRate(bigtime_t rate)
void mojobe_BWindow_SetPulseRate(BWindow* self, bigtime_t a_rate);
// bigtime_t BWindow::PulseRate() const
int64 mojobe_BWindow_PulseRate(BWindow* self);
// void BWindow::AddShortcut(uint32 key, uint32 modifiers, BMessage* message)
void mojobe_BWindow_AddShortcut(BWindow* self,
	uint32 a_key,
	uint32 a_modifiers,
	BMessage* a_message);
// bool BWindow::HasShortcut(uint32 key, uint32 modifiers)
bool mojobe_BWindow_HasShortcut(BWindow* self,
	uint32 a_key,
	uint32 a_modifiers);
// void BWindow::RemoveShortcut(uint32 key, uint32 modifiers)
void mojobe_BWindow_RemoveShortcut(BWindow* self,
	uint32 a_key,
	uint32 a_modifiers);
// void BWindow::MenusBeginning()
void mojobe_BWindow_MenusBeginning(BWindow* self);
// void BWindow::MenusEnded()
void mojobe_BWindow_MenusEnded(BWindow* self);
// bool BWindow::NeedsUpdate() const
bool mojobe_BWindow_NeedsUpdate(BWindow* self);
// void BWindow::UpdateIfNeeded()
void mojobe_BWindow_UpdateIfNeeded(BWindow* self);
// BView* BWindow::FindView(const char* viewName) const
BView* mojobe_BWindow_FindView__charP(BWindow* self, const char* a_viewName);
// BView* BWindow::FindView(BPoint arg0) const
BView* mojobe_BWindow_FindView__BPoint(BWindow* self, mojobe_BPoint a_arg0);
// BView* BWindow::CurrentFocus() const
BView* mojobe_BWindow_CurrentFocus(BWindow* self);
// void BWindow::Activate(bool arg0)
void mojobe_BWindow_Activate(BWindow* self, bool a_arg0);
// void BWindow::WindowActivated(bool focus)
void mojobe_BWindow_WindowActivated(BWindow* self, bool a_focus);
// BPoint BWindow::ConvertToScreen(BPoint point) const
mojobe_BPoint mojobe_BWindow_ConvertToScreen__BPoint(BWindow* self,
	mojobe_BPoint a_point);
// BRect BWindow::ConvertToScreen(BRect rect) const
mojobe_BRect mojobe_BWindow_ConvertToScreen__BRect(BWindow* self,
	mojobe_BRect a_rect);
// BPoint BWindow::ConvertFromScreen(BPoint point) const
mojobe_BPoint mojobe_BWindow_ConvertFromScreen__BPoint(BWindow* self,
	mojobe_BPoint a_point);
// BRect BWindow::ConvertFromScreen(BRect rect) const
mojobe_BRect mojobe_BWindow_ConvertFromScreen__BRect(BWindow* self,
	mojobe_BRect a_rect);
// void BWindow::MoveBy(float dx, float dy)
void mojobe_BWindow_MoveBy(BWindow* self, float a_dx, float a_dy);