Haiku/bridge/haiku/_api.mojo


def _BApplication_hooks[T: Movable & Deinitable]() -> _BApplicationHooks:
    """`T`'s hooks for a `BApplication`: a slot for each hook it implements, NULL for the rest, decided at compile time."""
    var hooks = _BApplicationHooks()
    hooks.type = _type_tag[T]()
    hooks.destroy = _fn_ptr(_destroy[T])
    comptime if conforms_to(T, ApplicationReadyToRun):
        hooks.ReadyToRun = _fn_ptr(
            _BApplication_ReadyToRun[downcast[T, ApplicationReadyToRun]],
        )
    comptime if conforms_to(T, ApplicationMessageReceived):
        hooks.MessageReceived = _fn_ptr(
            _BApplication_MessageReceived[downcast[T, ApplicationMessageReceived]],
        )
    comptime if conforms_to(T, ApplicationQuitRequested):
        hooks.QuitRequested = _fn_ptr(
            _BApplication_QuitRequested[downcast[T, ApplicationQuitRequested]],
        )
    comptime if conforms_to(T, ApplicationAboutRequested):
        hooks.AboutRequested = _fn_ptr(
            _BApplication_AboutRequested[downcast[T, ApplicationAboutRequested]],
        )
    comptime if conforms_to(T, ApplicationPulse):
        hooks.Pulse = _fn_ptr(
            _BApplication_Pulse[downcast[T, ApplicationPulse]],
        )
    return hooks

# ========================================================================== #
# BWindow
# ========================================================================== #


trait _AsBWindow:
    """Has a `BWindow*` for libmojobe."""

    def _as_BWindow(self) -> _NPtr:
        ...


trait _BWindowMethods(_AsBWindow):
    """`BWindow`'s methods, for its references and the values Mojo owns."""

    def Archive(self, archive: Some[_AsBMessage], deep: Bool = True) raises:
        """`status_t BWindow::Archive(BMessage* archive, bool deep) const`."""
        var _result = external_call["mojobe_BWindow_Archive", Int32](
            _nonnull(self._as_BWindow(), "BWindow::Archive"),
            _addr(archive._as_BMessage()),
            deep,
        )
        _check(_result, "BWindow::Archive")

    def Close(self):
        """`void BWindow::Close()`."""
        external_call["mojobe_BWindow_Close", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Close"),
        )

    def AddChild(self, var child: BView, before: BViewRef = BViewRef()):
        """`void BWindow::AddChild(BView* child, BView* before)`."""
        external_call["mojobe_BWindow_AddChild", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::AddChild"),
            child^._adopt(),
            _addr(before._as_BView()),
        )

    def RemoveChild(self, child: Some[_AsBView]) -> Bool:
        """`bool BWindow::RemoveChild(BView* child)`."""
        var _result = external_call["mojobe_BWindow_RemoveChild", Bool](
            _nonnull(self._as_BWindow(), "BWindow::RemoveChild"),
            _addr(child._as_BView()),
        )
        return _result

    def CountChildren(self) -> Int32:
        """`int32 BWindow::CountChildren() const`."""
        var _result = external_call["mojobe_BWindow_CountChildren", Int32](
            _nonnull(self._as_BWindow(), "BWindow::CountChildren"),
        )
        return _result

    def ChildAt(self, index: Int32) -> BViewRef:
        """`BView* BWindow::ChildAt(int32 index) const`."""
        var _result = external_call["mojobe_BWindow_ChildAt", Int](
            _nonnull(self._as_BWindow(), "BWindow::ChildAt"),
            index,
        )
        return BViewRef(_ptr_from(_result))

    def MessageReceived(self, message: Some[_AsBMessage]):
        """`void BWindow::MessageReceived(BMessage* message)`."""
        external_call["mojobe_BWindow_MessageReceived", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::MessageReceived"),
            _addr(message._as_BMessage()),
        )

    def FrameMoved(self, newPosition: BPoint):
        """`void BWindow::FrameMoved(BPoint newPosition)`."""
        external_call["mojobe_BWindow_FrameMoved", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::FrameMoved"),
            newPosition,
        )

    def WorkspacesChanged(self, oldWorkspaces: UInt32, newWorkspaces: UInt32):
        """`void BWindow::WorkspacesChanged(uint32 oldWorkspaces, uint32 newWorkspaces)`."""
        external_call["mojobe_BWindow_WorkspacesChanged", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::WorkspacesChanged"),
            oldWorkspaces,
            newWorkspaces,
        )

    def WorkspaceActivated(self, workspace: Int32, state: Bool):
        """`void BWindow::WorkspaceActivated(int32 workspace, bool state)`."""
        external_call["mojobe_BWindow_WorkspaceActivated", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::WorkspaceActivated"),
            workspace,
            state,
        )

    def FrameResized(self, newWidth: Float32, newHeight: Float32):
        """`void BWindow::FrameResized(float newWidth, float newHeight)`."""
        external_call["mojobe_BWindow_FrameResized", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::FrameResized"),
            newWidth,
            newHeight,
        )

    def Minimize(self, minimize: Bool):
        """`void BWindow::Minimize(bool minimize)`."""
        external_call["mojobe_BWindow_Minimize", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Minimize"),
            minimize,
        )

    def Zoom(self, origin: BPoint, width: Float32, height: Float32):
        """`void BWindow::Zoom(BPoint origin, float width, float height)`."""
        external_call["mojobe_BWindow_Zoom__BPoint_float_float", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Zoom"),
            origin,
            width,
            height,
        )

    def Zoom(self):
        """`void BWindow::Zoom()`."""
        external_call["mojobe_BWindow_Zoom__void", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Zoom"),
        )

    def SetZoomLimits(self, maxWidth: Float32, maxHeight: Float32):
        """`void BWindow::SetZoomLimits(float maxWidth, float maxHeight)`."""
        external_call["mojobe_BWindow_SetZoomLimits", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::SetZoomLimits"),
            maxWidth,
            maxHeight,
        )

    def SetPulseRate(self, rate: Int64):
        """`void BWindow::SetPulseRate(bigtime_t rate)`."""
        external_call["mojobe_BWindow_SetPulseRate", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::SetPulseRate"),
            rate,
        )

    def PulseRate(self) -> Int64:
        """`bigtime_t BWindow::PulseRate() const`."""
        var _result = external_call["mojobe_BWindow_PulseRate", Int64](
            _nonnull(self._as_BWindow(), "BWindow::PulseRate"),
        )
        return _result

    def AddShortcut(
        self,
        key: UInt32,
        modifiers: UInt32,
        message: Some[_AsBMessage],
    ):
        """`void BWindow::AddShortcut(uint32 key, uint32 modifiers, BMessage* message)`."""
        external_call["mojobe_BWindow_AddShortcut", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::AddShortcut"),
            key,
            modifiers,
            _addr(message._as_BMessage()),
        )

    def HasShortcut(self, key: UInt32, modifiers: UInt32) -> Bool:
        """`bool BWindow::HasShortcut(uint32 key, uint32 modifiers)`."""
        var _result = external_call["mojobe_BWindow_HasShortcut", Bool](
            _nonnull(self._as_BWindow(), "BWindow::HasShortcut"),
            key,
            modifiers,
        )
        return _result

    def RemoveShortcut(self, key: UInt32, modifiers: UInt32):
        """`void BWindow::RemoveShortcut(uint32 key, uint32 modifiers)`."""
        external_call["mojobe_BWindow_RemoveShortcut", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::RemoveShortcut"),
            key,
            modifiers,
        )

    def MenusBeginning(self):
        """`void BWindow::MenusBeginning()`."""
        external_call["mojobe_BWindow_MenusBeginning", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::MenusBeginning"),
        )

    def MenusEnded(self):
        """`void BWindow::MenusEnded()`."""
        external_call["mojobe_BWindow_MenusEnded", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::MenusEnded"),
        )

    def NeedsUpdate(self) -> Bool:
        """`bool BWindow::NeedsUpdate() const`."""
        var _result = external_call["mojobe_BWindow_NeedsUpdate", Bool](
            _nonnull(self._as_BWindow(), "BWindow::NeedsUpdate"),
        )
        return _result

    def UpdateIfNeeded(self):
        """`void BWindow::UpdateIfNeeded()`."""
        external_call["mojobe_BWindow_UpdateIfNeeded", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::UpdateIfNeeded"),
        )

    def FindView(self, var viewName: String) -> BViewRef:
        """`BView* BWindow::FindView(const char* viewName) const`."""
        var _result = external_call["mojobe_BWindow_FindView__charP", Int](
            _nonnull(self._as_BWindow(), "BWindow::FindView"),
            viewName.as_c_string_span(),
        )
        _ = viewName^
        return BViewRef(_ptr_from(_result))

    def FindView(self, arg0: BPoint) -> BViewRef:
        """`BView* BWindow::FindView(BPoint arg0) const`."""
        var _result = external_call["mojobe_BWindow_FindView__BPoint", Int](
            _nonnull(self._as_BWindow(), "BWindow::FindView"),
            arg0,
        )
        return BViewRef(_ptr_from(_result))

    def CurrentFocus(self) -> BViewRef:
        """`BView* BWindow::CurrentFocus() const`."""
        var _result = external_call["mojobe_BWindow_CurrentFocus", Int](
            _nonnull(self._as_BWindow(), "BWindow::CurrentFocus"),
        )
        return BViewRef(_ptr_from(_result))

    def Activate(self, arg0: Bool = True):
        """`void BWindow::Activate(bool arg0)`."""
        external_call["mojobe_BWindow_Activate", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Activate"),
            arg0,
        )

    def WindowActivated(self, focus: Bool):
        """`void BWindow::WindowActivated(bool focus)`."""
        external_call["mojobe_BWindow_WindowActivated", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::WindowActivated"),
            focus,
        )

    def ConvertToScreen(self, point: BPoint) -> BPoint:
        """`BPoint BWindow::ConvertToScreen(BPoint point) const`."""
        var _result = external_call["mojobe_BWindow_ConvertToScreen__BPoint", BPoint](
            _nonnull(self._as_BWindow(), "BWindow::ConvertToScreen"),
            point,
        )
        return _result

    def ConvertToScreen(self, rect: BRect) -> BRect:
        """`BRect BWindow::ConvertToScreen(BRect rect) const`."""
        var _result = external_call["mojobe_BWindow_ConvertToScreen__BRect", BRect](
            _nonnull(self._as_BWindow(), "BWindow::ConvertToScreen"),
            rect,
        )
        return _result

    def ConvertFromScreen(self, point: BPoint) -> BPoint:
        """`BPoint BWindow::ConvertFromScreen(BPoint point) const`."""
        var _result = external_call["mojobe_BWindow_ConvertFromScreen__BPoint", BPoint](
            _nonnull(self._as_BWindow(), "BWindow::ConvertFromScreen"),
            point,
        )
        return _result

    def ConvertFromScreen(self, rect: BRect) -> BRect:
        """`BRect BWindow::ConvertFromScreen(BRect rect) const`."""
        var _result = external_call["mojobe_BWindow_ConvertFromScreen__BRect", BRect](
            _nonnull(self._as_BWindow(), "BWindow::ConvertFromScreen"),
            rect,
        )
        return _result

    def MoveBy(self, dx: Float32, dy: Float32):
        """`void BWindow::MoveBy(float dx, float dy)`."""
        external_call["mojobe_BWindow_MoveBy", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::MoveBy"),
            dx,
            dy,
        )
